  you should now define them as 'visual'. Databases are automatically
  converted to have the appropriate attribute flags.

- Visibility restrictions on attributes have been sanitized, so they are
  consistent across commands and functions.

- Attribute flags that have no meaning on a global basis can no longer
  be set globally via @attribute and the like, thus reducing confusion.

- Named references ("nrefs"), which behave like aliases for dbrefs, 
  in the form of '#_<name>' are now supported. Nrefs are globally unique.

- When an object name is ambiguously matched (i.e., potentially matches
  several objects), the match is now truly chosen randomly; in the past,
  the last match was heavily favored.

- A rewrite has begun on the help files.

-----------------------------------------------------------------------------

CHANGES TO FLAGS AND POWERS

- An object with the new attr_read power is able to see attributes
  with the 'hidden' attribute flag, just like Wizards and Royalty can.

- An object with the new attr_write power is able to set attributes
  with the 'wizard' attribute flag, just like Wizards can.

- An object with the new link_any_home power can set the home of any
  object (@link an object anywhere), just like Wizards can.

- If a wizard connects while DARK, they are reminded that they are
  currently set DARK. Also, wizards are notified when they are set
  DARK due to idle-wizards-being-set-dark.

- There is a new type of lock, the DarkLock, which controls whether or
  not a player sees an object as DARK. Based loosely on a patch by
  Malcolm Campbell (Calum).

- There is a new power, Cloak, which is God-settable. It enables an
  object which can listen (such a player or puppet) to be dark in the
  room contents and movement messages; previously, this was only true
  for listening objects both Dark and Wizard. Note that since wizard
  Dark is now affected by the visible_wizards config parameter, if that