@@ -29,6 +29,7 @@
 #define AF_STRUCTURE	0x00080000	/* Attribute contains a structure */
 #define AF_DIRTY	0x00100000	/* Attribute number has been modified */
 #define AF_DEFAULT	0x00200000	/* did_it() checks attr_defaults obj */
+#define AF_NONAME	0x00400000	/* If used as oattr, no name prepend */
 
 #define A_NULL		0	/* Nothing */
 #define	A_OSUCC		1	/* Others success message */
@@ -192,6 +193,7 @@
 	if (a & AF_DEFAULT) *p++ = 'D'; \
 	if (a & AF_HTML) *p++ = 'H'; \
 	if (a & AF_PRIVATE) *p++ = 'I'; \
+	if (a & AF_NONAME) *p++ = 'N'; \
 	if (a & AF_NOPARSE) *p++ = 'P'; \
 	if (a & AF_REGEXP) *p++ = 'R'; \
 	if (a & AF_STRUCTURE) *p++ = 'S'; \
